# HSE_project_snake

./: .gitignore  CMakeLists.txt  README.md  commits_for_presentation.txt  main  main.cpp
include/: Board.h  CMakeLists.txt  Food.h  FoodGenerator.h  FoodTypes.h  Game.h  GameEntity.h  GameField.h  Renderer.h  Segment.h  Snake.h
src/: Board.cpp  CMakeLists.txt  Food.cpp  FoodGenerator.cpp  FoodTypes.cpp  Game.cpp  GameEntity.cpp  GameField.cpp  Renderer.cpp  Segment.cpp  Snake.cpp  example.cpp  main.cpp
tests/: test_board.cpp  test_food.cpp  test_foodgenerator.cpp  test_foodtypes.cpp  test_game.cpp  test_game_entity.cpp  test_renderer.cpp  test_segment.cpp  test_snake.cpp
