add_executable(src example.cpp
        Game.cpp
        ../include/Game.h
        Board.cpp
        ../include/Board.h
        FoodGenerator.cpp
        ../include/FoodGenerator.h
        GameEntity.cpp
        ../include/GameEntity.h
        Segment.cpp
        ../include/Segment.h
        Snake.cpp
        ../include/Snake.h
)